--- a/static/css/design-tokens-adaptive.css
+++ b/static/css/design-tokens-adaptive.css
@@ -449,7 +449,7 @@ a {
 
 .card__title {
   margin: 0 0 0.5rem;
-  font-size: var(--fs-h1);
+  font-size: var(--fs-h2);
   font-weight: 700;
 }
 
